<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/top_bar_layout"
        layout="@layout/item_complete_topbar" />

    <TextView
        android:text="@string/customer_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:text="@string/question_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/question_content"
        android:hint="@string/question_prompt"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:gravity="top"
        android:background="@drawable/rect"/>

    <Button
        android:id="@+id/post_question_btn"
        android:text="@string/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/rect_brown"
        android:textColor="@color/white"
        android:textStyle="bold"/>
</LinearLayout>