<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/top_bar_layout"
            layout="@layout/item_complete_topbar" />

        <TextView
            android:text="@string/edit_profile"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_sq"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"/>

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_sq"
            android:orientation="horizontal">

            <TextView
                android:text="@string/name"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightGray"/>
        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_sq"
            android:orientation="horizontal">

            <TextView
                android:text="@string/age"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/edit_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightGray"/>
        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_sq"
            android:orientation="horizontal">

            <TextView
                android:text="@string/introduction"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/edit_introduction"
                android:hint="@string/introduction_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightGray"/>
        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_sq"
            android:orientation="horizontal">

            <TextView
                android:text="@string/photo"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/upload_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightGray"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_marginEnd="10dp">

                    <Button
                        android:id="@+id/camera_btn"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/camera"/>

                    <Button
                        android:id="@+id/gallery_btn"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/photo"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/post_edit_info_btn"
            android:text="@string/edit"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rect_brown"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>