<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8E2800"
    tools:context=".activity.sign.login.RegisterActivity">
    <!-- DONE
        edit action bar
        TODO: text box auto complete
            how? using SharedPreferences.Editor(p.714)
     -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:src="@drawable/logo_w"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"/>

            <TextView
                android:text="@string/app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"
                android:textColor="#F2F2F2"
                android:textSize="40sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:hint="@string/email"
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#F2F2F2"
                android:drawableStart="@drawable/id"
                android:padding="10dp"
                android:textColorHint="#8C8681" />

            <EditText
                android:hint="@string/password"
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#F2F2F2"
                android:drawableStart="@drawable/password"
                android:padding="10dp"
                android:textColorHint="#8C8681"
                android:inputType="textPassword"/>

            <Button
                android:text="@string/login"
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#8C8681"
                android:textSize="18sp"
                android:textColor="#8E2800"
                android:textStyle="bold" />

            <Button
                android:text="@string/register"
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#8E2800"
                android:textSize="18sp"
                android:textColor="#8C8681"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>