<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:orientation="horizontal"
    android:layout_gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/like_btn_wrapper"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@drawable/rect_sq"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_profile" />


        <Button
            android:id="@+id/like_btn"
            android:layout_width="62dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:text="@string/like"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/rect_sq"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/ic_profile"/>

        <Button
            android:id="@+id/co_btn"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:text="@string/companion"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/rect_sq"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_profile"/>

        <Button
            android:id="@+id/cmt_post_btn"
            android:layout_width="68dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:text="@string/comment"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>