<?xml version="1.0" encoding="utf-8"?>
<!-- DONE
    password to be not shown
    automatically put the phone number
    automatically put the email
    TODO: move cursor automatically
-->
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:sl="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basic"
    tools:context=".activity.sign.login.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.ssomai.android.scalablelayout.ScalableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            sl:scale_base_height="120"
            sl:scale_base_width="360">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="94dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_w"
                sl:scale_top="40"
                sl:scale_height="75"
                sl:scale_width="75"/>
        </com.ssomai.android.scalablelayout.ScalableLayout>

        <com.ssomai.android.scalablelayout.ScalableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            sl:scale_base_height="480"
            sl:scale_base_width="360">

            <EditText
                android:id="@+id/usernameText"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/id"
                android:background="@null"
                android:hint="@string/username"
                android:padding="10dp"
                android:textColorHint="@color/gray"
                sl:scale_textsize="15"
                sl:scale_top="65"
                sl:scale_height="40"
                sl:scale_width="250" />

            <EditText
                android:hint="@string/email"
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/email"
                android:background="@null"
                android:padding="10dp"
                android:textColorHint="@color/gray"
                sl:scale_top="105"
                sl:scale_height="40"
                sl:scale_width="250"
                sl:scale_textsize="15"/>

            <EditText
                android:hint="@string/password"
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/password"
                android:background="@null"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="@color/gray"
                sl:scale_top="145"
                sl:scale_height="40"
                sl:scale_width="250"
                sl:scale_textsize="15" />


            <EditText
                android:hint="@string/passwordCheck"
                android:id="@+id/passwordCheckText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/check"
                android:background="@null"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="@color/gray"
                sl:scale_top="185"
                sl:scale_height="40"
                sl:scale_width="250"
                sl:scale_textsize="15" />

            <EditText
                android:hint="@string/phone"
                android:id="@+id/phoneText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/phone"
                android:background="@null"
                android:padding="10dp"
                android:textColorHint="@color/gray"
                sl:scale_top="225"
                sl:scale_height="40"
                sl:scale_width="250"
                sl:scale_textsize="15"  />
            <!-- TODO: register birth format -->
            <EditText
                android:hint="@string/birth"
                android:id="@+id/ageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/age"
                android:background="@null"
                android:padding="10dp"
                android:textColorHint="@color/gray"
                sl:scale_top="265"
                sl:scale_height="40"
                sl:scale_width="250"
                sl:scale_textsize="15" />

            <Button
                android:text="@string/register"
                android:id="@+id/registerBtn"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                sl:scale_top="305"
                sl:scale_height="40"
                sl:scale_width="250"
                sl:scale_textsize="15" />
        </com.ssomai.android.scalablelayout.ScalableLayout>
    </LinearLayout>
</FrameLayout>
