<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/my_wall_profile_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/profile"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="50dp"
                android:background="#fff"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/my_wall_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/my_wall_introduction_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/my_wall_edit_info_btn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/edit_profile"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>
        </FrameLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="20dp"
            android:background="#ACACAC" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/my_wall_post_goal_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/my_wall_carrot_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/carrot"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="60dp"
                android:background="#ACACAC" />


            <LinearLayout
                android:id="@+id/my_wall_follower"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/my_wall_follower_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="60dp"
                android:background="#ACACAC" />


            <LinearLayout
                android:id="@+id/my_wall_following"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/my_wall_following_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#ACACAC" />
        <Button
            android:id="@+id/my_wall_post_goal_log_btn"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@drawable/rect_sq"
            android:gravity="center"
            android:hint="@string/log_write_prompt" />
    </LinearLayout>
</RelativeLayout>